--- a/action.yml
+++ b/action.yml
@@ -20,4 +20,4 @@ inputs:
 
 runs:
   using: docker
-  image: docker://ghcr.io/ahmadnassri/action-workflow-queue:1.2.0
+  image: teamleader/action-workflow-queue:1.2.0
