--- a/action.yml
+++ b/action.yml
@@ -18,10 +18,10 @@ inputs:
     description: delay between status checks (in milliseconds)
     default: "10000"
   
-  regex:
-    description: regex for jobs to check
-    default: ".*"
+  jobs:
+    description: list of jobs to check
+    default: ""
 
 runs:
   using: docker
-  image: docker://teamleader/action-workflow-queue:1.2.6
+  image: docker://teamleader/action-workflow-queue:1.3.0
